# Chess

./: .gitignore  CMakeLists.txt  README.md  build_clean_debug.sh  build_clean_run.sh  build_clean_test.sh  build_debug.sh  build_debug_run.sh  build_debug_test.sh  build_run.sh  build_test.sh  conanfile.txt  main.cpp  positionSTD2Game.py
src/: Bishop.cpp  Board.cpp  CMakeLists.txt  ChessManager.cpp  ChessManager.hpp  Figure.cpp  Figure.hpp  FigureImage.cpp  FigureManager.cpp  FigureRenderizer.cpp  FigureRenderizerSFML.cpp  Game.cpp  King.cpp  Knight.cpp  Knight.hpp  MovementsBasic.cpp  MovementsBishop.cpp  MovementsDiagonal.cpp  MovementsKing.cpp  MovementsKnight.cpp  MovementsPawn.cpp  MovementsPositionState.cpp  MovementsQueen.cpp  MovementsRook.cpp  MovementsSides.cpp  MovementsSidesDeep.cpp  MovementsUpDown.cpp  Pawn.cpp  Pawn.hpp  Player.cpp  PossibleMovementsRenderizerSFML.cpp  Queen.cpp  Rook.cpp  Square.cpp  State.cpp  StateFigureSelected.cpp  StateNothingSelected.cpp  main.cpp
src/include/: Bishop.hpp  Board.hpp  ChessManager.hpp  Figure.hpp  FigureImage.hpp  FigureManager.hpp  FigureRenderizer.hpp  FigureRenderizerSFML.hpp  Game.hpp  King.hpp  Knight.hpp  Movements.hpp  MovementsBasic.hpp  MovementsBishop.hpp  MovementsDiagonal.hpp  MovementsKing.hpp  MovementsKnight.hpp  MovementsOnDeepTemplates.hpp  MovementsPawn.hpp  MovementsPositionState.hpp  MovementsQueen.hpp  MovementsRook.hpp  MovementsSides.hpp  MovementsSidesDeep.hpp  MovementsUpDown.hpp  Pawn.hpp  Player.hpp  PossibleMovementsRenderizerSFML.hpp  Queen.hpp  RenderizerSFML.hpp  Rook.hpp  Square.hpp  State.hpp  StateFigureSelected.hpp  StateNothingSelected.hpp
test/: CMakeLists.txt  MovementsBasicDown.cpp  MovementsBasicLeft.cpp  MovementsBasicRight.cpp  MovementsBasicUp.cpp  MovementsDiagonal.cpp  MovementsDown.cpp  MovementsDownLeft.cpp  MovementsDownRight.cpp  MovementsExpectedBishop.hpp  MovementsExpectedPawn.hpp  MovementsExpectedQueen.hpp  MovementsExpectedRook.hpp  MovementsFigures.cpp  MovementsLeft.cpp  MovementsPawn.cpp  MovementsRight.cpp  MovementsSides.cpp  MovementsUp.cpp  MovementsUpDown.cpp  MovementsUpLeft.cpp  MovementsUpRight.cpp  SpotBases.hpp  Spots.hpp  Square.cpp  main.cpp
test/Mocks/: FigureMock.hpp
